--- a/frontend/css/jewelry-workshop-devices.css
+++ b/frontend/css/jewelry-workshop-devices.css
@@ -63,9 +63,8 @@ body {
   align-items: center;
   justify-content: center;
 
-  width: 160px;
+  width: 100%;
   color: black;
-  padding-left: 10px;
   font-family: Raleway, sans-serif;
   text-decoration: none;
 
